--- a/templates/base.html
+++ b/templates/base.html
@@ -40,10 +40,12 @@
 		<div class="banner_video_section">
 			<div class="banner_overlay"></div>
 			<video id="video2" width="100%" height="100%" poster="{% static 'image/banner_img.jpg' %}" autoplay muted loop playsinline onclick="return false">
-				<source src="https://storage.googleapis.com/project_resource_bucket/WNDR%20TRAILER.mp4" type="video/mp4">
+				<source src="{% static 'video/wndr_Tech demo (1080p).mp4' %}" type="video/mp4">
 			</video>
 		</div>
 		<!-- header start here -->
+
+		
 		<header class="header-tag-WNDR">
 	    <div class="header_WNDR">
 			    <div class="header-line header-line-shadow1">
