--- a/templates/splash.html
+++ b/templates/splash.html
@@ -35,7 +35,7 @@
 						<a href="{% url 'home' %}"><img src= "{% static 'image/cross_btn.png' %}" alt="cross_icon"></a>
 					</div>
 					<video id="myVideo" width="100%" height="100%" controls="" autoplay muted>
-					<source src="https://storage.googleapis.com/project_resource_bucket/WNDR%20TRAILER.mp4" type="video/mp4">
+					<!-- <source src="{% static 'video/WNDR TRAILER.mp4' %}" type="video/mp4"> -->
 					</video>
 				</div>
 			</div>
