--- a/templates/home.html
+++ b/templates/home.html
@@ -223,14 +223,14 @@
 
 	<!-- game-play start -->
 	<!-- game-play start -->
+	<div class="gamePlayer">
 		<div class="video_overlays"></div>			
-				<!-- <video id="myVideo" class="video video_desktop_home" width="100%" height="100%" poster="{% static 'image/game-player.jpg' %}" autoplay muted controls>
-					<source src="{% static 'video/wndr_Tech demo (1080p).mp4' %}" type="video/mp4">
+				<video id="myVideo" class="video video_desktop_home" width="100%" height="100%" poster="{% static 'image/game-player.jpg' %}" autoplay muted controls>
+					<source src="https://storage.googleapis.com/project_resource_bucket/WNDR%20TRAILER.mp4" type="video/mp4">
 				</video>
 				<video id="myVideo" class="video video_mbl_home"  controls="controls" width="100%" height="100%" poster="{% static 'image/game-player_mbl.png' %}" autoplay muted>
-					<source src="{% static 'video/wndr_Tech demo (1080p).mp4' %}" type="video/mp4">
-				</video>	 -->
-
+					<source src="https://storage.googleapis.com/project_resource_bucket/WNDR%20TRAILER.mp4" type="video/mp4">
+				</video>	
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
