--- a/templates/splash.html
+++ b/templates/splash.html
@@ -9,6 +9,7 @@
 		<title>Wndr.Land</title>
 	
 		<!-- slick css -->
+<!-- slick css -->
 	 <link rel="stylesheet" href="{% static 'css/slick.css' %}">
 	 <link rel="stylesheet" href="{% static 'css/slick-theme.css' %}">
 	 <!--<link rel="stylesheet" href="{% static 'css/uikit.min.css' %}">-->
