--- a/templates/our-vision.html
+++ b/templates/our-vision.html
@@ -236,13 +236,19 @@
 
                 <p class="uk-scrollspy-inview">To create a solution for a mass audience of online entertainment enthusiasts (and for ourselves as proud members of the same demographic group), we had to develop the technology to power the vision with lessons learned from our work producing Flash games.
 				</p>
+				<div class="wndr_engine">
+					<h2>Wndr Stream Engine</h2>
+					<p>Tech Demo 2018</p>
+				</div>
 				<div class="vision_video_section" id="video_section_with_image">
-					<video id="myVideo12" class="video1" width="100%" height="100%" controls poster="{% static 'image/slide 15 STREAM.jpg' %}" autoplay muted>
+					<video id="myVideo12" class="video1" width="100%" height="100%" controls poster="{% static 'image/slide-15-STREAM.jpg' %}" autoplay muted>
 						<source src="{% static 'video/wndr_Tech demo (1080p).mp4' %}" type="video/mp4">
 					</video>
-						<img class="vision_poster_bnr" id="vision_poster_bnr_img" src="{% static 'image/slide 15 STREAM.jpg' %}" alt="vision_poster">
-				</div>	
-						
+						<img class="vision_poster_bnr" id="vision_poster_bnr_img" src="{% static 'image/slide-15-STREAM.jpg' %}" alt="vision_poster">
+				</div>
+				<div>
+					<p class="device_gnostic">Device Agnostic</p>	
+				</div>
                 <p class="uk-scrollspy-inview video_btm_main_txt">The WNDR model is based on the principle of “play everywhere” — we make seamless gaming a reality by delivering similar experiences on mobile, desktop, and Smart TV. In line at Whole Foods? Mobile play. Laying on the couch? Use your mobile phone as a virtual remote controller for Smart TV play or tap your Playstation or Xbox controllers. No need for clunky VR goggles, or messing up your hair with some elaborate visor contraption.
 				</p>
 </div>
