--- a/templates/teams.html
+++ b/templates/teams.html
@@ -146,7 +146,7 @@
 				<div class="row teams_bois_section">
 					<div class="col-md-6 col-sm-6">
 						<div class="member_teams">
-							<img class="tm-people" src="{% static 'img/borrispic.jpg' %}" alt="">
+							<img class="tm-people" src="{% static 'img/Borris.jpeg' %}" alt="">
 						</div>
 						<div class="team_member_section">
 						<div class="member_txt">
