--- a/templates/base.html
+++ b/templates/base.html
@@ -39,8 +39,11 @@
 		</div>
 		<div class="banner_video_section">
 			<div class="banner_overlay"></div>
-			<video id="video2" width="100%" height="100%" poster="{% static 'image/banner_img.jpg' %}" autoplay muted loop playsinline onclick="return false">
-				<source src="https://storage.googleapis.com/project_resource_bucket/WNDR%20TRAILER.mp4" type="video/mp4">
+			<video class="banner_desktop_video" id="video2" width="100%" height="100%" poster="{% static 'image/banner_img.jpg' %}" autoplay muted loop playsinline onclick="return false">
+				<source src="https://wndr.nyc3.digitaloceanspaces.com/PC_V_2.mp4" type="video/mp4">
+			</video>
+			<video class="banner_mobile_video" id="video2" width="100%" height="100%" poster="{% static 'image/banner_img.jpg' %}" autoplay muted loop playsinline onclick="return false">
+				<source src="https://wndr.nyc3.digitaloceanspaces.com/Mobile_V_189_2.mp4" type="video/mp4">
 			</video>
 		</div>
 		<!-- header start here -->
