--- a/templates/contact.html
+++ b/templates/contact.html
@@ -304,7 +304,7 @@
 <!--<script src="{% static 'js/uikit.min.js' %}"></script>-->
 <script>
 	function subscribe() {
-	console.log("Arrival")
+	console.log("Arrival-2")
         email = $('#myInput').val();
 		console.log(email)
 	if(email!=''){
