--- a/templates/home.html
+++ b/templates/home.html
@@ -5,6 +5,29 @@
 
 	<!-- Button trigger modal --> 
 
+	<style>
+		.sueccs-msg {
+			background: rgb(1 221 95 / 52%);
+			color: white;
+			width: 500px !important;
+			height: 36px;
+			margin-top: 55px;
+			position: relative;
+			margin-left: -43px;
+			max-width: 344px !important;
+			position: absolute;
+			margin-top: 45px;
+			font-size: 14px;
+		}
+		
+		
+		span#sucess2 {
+			position: absolute;
+			top: 50%;
+			left: 20px;
+			transform: translate(-0, -50%);
+		}
+	</style>
 <!-- Modal -->
 
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -28,11 +51,11 @@
 			  </span>-->
 			  <div class="sbscribe_btn_input">
 				<span>
-					<input type="email" name="myInput" required  id="myInput" value="" placeholder="Email">
+					<input type="email" name="myInput1" required  id="myInput1" value="" placeholder="Email">
 				</span>
 				</div>
-			  <div class="alert alert-danger sueccs-msg" id="sucess_div" role="alert" hidden>
-				<span id="sucess" ></span>
+			  <div class="alert alert-danger sueccs-msg" id="sucess_div1" role="alert" hidden>
+				<span id="sucess1" ></span>
 			  </div>
 				  <!-- <div class="alert alert-danger danger-msg" role="alert">
 					This is a danger alert—check it out!
@@ -41,7 +64,7 @@
 					This is a danger alert—check it out!
 				  </div> -->
 			  <div class="sbscribe-section">
-				<button class="sbt-btn" onclick="myFunction()">Submit</button>
+				<button class="sbt-btn" onclick="myFunction1()">Submit</button>
 			  </div>
 		 
 		  </div>
@@ -62,12 +85,15 @@
 				<div class="banner-WNDR-outer">
 					<div class="banner-WNDR-btn">
 						<span class="WNDR-btn-item WNDR_btn_home animated uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-left; delay: 300; repeat: true">
-						<input type="email" name="myInp" value="" id="myInputs" placeholder="Email"></span><br>
+						<input type="email" name="myInput2" value="" id="myInput2" placeholder="Email"></span><br>
+						<div class="alert alert-danger sueccs-msg" id="sucess_div2" role="alert" hidden>
+							<span id="sucess2" ></span>
+						  </div>
 						<div class="sucess_mesg">
 							<p class=""></p> <!--Remove Sucessfull inside the paragraph tag and class named "bnr_sucess_mesg" in p class--> 
 						</div>
-						<button class="WNDR-btn-item1 mbl_sbscribe_btn uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-left; delay: 200; repeat: true" onclick="myFunctionsub()">
-							Subscribe
+						<button class="WNDR-btn-item1 mbl_sbscribe_btn uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-left; delay: 200; repeat: true" onclick="myFunction2()">
+							subscribe
 						</button>
 					</div>
 					<div class="mbl-arrow">
@@ -317,17 +343,17 @@
 							</span>-->
 							<div class="sbscribe_btn_input">
 								<span>
-									<input type="email" name="myInp" id="myInputs" value="" placeholder="Enter email">
+									<input type="email" name="myInput3" id="myInput3" value="" placeholder="Enter email">
 								</span>
 								</div>
 								<!-- <div class="alert alert-danger danger-msg" role="alert">
 								  This is a danger alert—check it out!
 								</div>-->
-								<div class="alert alert-danger sueccs-msg" id="sucess_divs" role="alert" hidden>
-								  <span id="sucesss"></span>
+								<div class="alert alert-danger sueccs-msg" id="sucess_div3" role="alert" hidden>
+								  <span id="sucess3"></span>
 								</div>
 							<div class="sbscribe-section">
-								<button class="sbt-btn" onclick="myFunctionsub()">Submit</button>
+								<button class="sbt-btn" onclick="myFunction3()">Submit</button>
 							</div>
 						
 					</div>
