--- a/templates/our-vision.html
+++ b/templates/our-vision.html
@@ -511,7 +511,7 @@ function topFunction() {
 <script>
 	
 function myFunction() {
-	console.log("Arrival")
+	console.log("Arrival-3")
         email = $('#myInput').val();
 		console.log(email)
 	if(email!=''){
