--- a/templates/roadmap.html
+++ b/templates/roadmap.html
@@ -529,7 +529,7 @@
 	</script>
 <script>
 function myFunction() {
-	console.log("Arrival")
+	console.log("Arrival-4")
         email = $('#myInput').val();
 		console.log(email)
 	if(email != ''){
