--- a/templates/home.html
+++ b/templates/home.html
@@ -331,7 +331,7 @@
 								  This is a danger alert—check it out!
 								</div>-->
 								
-							<div class="sbscribe-section">
+							<div class="sbscribe-section" id="submit_5">
 								<button class="sbt-btn" id="btn-d3" onclick="myFunction3()">Submit</button>
 							</div>
 						
