--- a/templates/roadmap.html
+++ b/templates/roadmap.html
@@ -544,7 +544,7 @@ function myFunction() {
 
 		success: function (data) {
 			document.getElementById("sucess_div").hidden=false;
-			document.getElementById("sucess").innerHTML = "Thankyou for Subscribing"
+			document.getElementById("sucess").innerHTML = "Thank you for subscribing"
 			$('#myInput').val('');
 			$("#sucess_div").delay(3000).fadeOut();
 			$("#btn-d").attr("disabled", false);
