--- a/templates/teams.html
+++ b/templates/teams.html
@@ -288,7 +288,7 @@
 	
 			success: function (data) {
 				document.getElementById("sucess_div").hidden=false;
-				document.getElementById("sucess").innerHTML = "Thankyou for Subscribing"
+				document.getElementById("sucess").innerHTML = "Thank you for subscribing"
 				$('#myInput').val('');
 				$("#sucess_div").delay(3000).fadeOut();
 				$("#btn-d").attr("disabled", false);
