--- a/templates/base.html
+++ b/templates/base.html
@@ -374,7 +374,8 @@
 							document.getElementById("sucess_div1").hidden = false;
 							document.getElementById("sucess1").innerHTML = "Thank you for subscribing"
 							$('#myInput1').val('');
-							$("#sucess_div1").delay(3000).fadeOut();
+							// $("#sucess_div1").delay(3000).fadeOut();
+							$("#sucess_div1").show().delay(3000).fadeOut();
 							$("#btn-d1").attr("disabled", false);
 
 						},
@@ -400,7 +401,8 @@
 							document.getElementById("sucess_div2").hidden = false;
 							document.getElementById("sucess2").innerHTML = "Thank you for subscribing"
 							$('#myInput2').val('');
-							$("#sucess_div2").delay(3000).fadeOut();
+							// $("#sucess_div2").delay(3000).fadeOut();
+							$("#sucess_div2").show().delay(3000).fadeOut();
 							$("#btn-d2").attr("disabled", false);
 
 
@@ -430,8 +432,9 @@
 							document.getElementById("sucess_div3").hidden = false;
 							document.getElementById("sucess3").innerHTML = "Thank you for subscribing"
 							$('#myInput3').val('');
-							$("#sucess_div3").delay(3000).fadeOut();
-							$("#btn-d").attr("disabled", false);
+							// $("#sucess_div3").delay(3000).fadeOut();
+							$("#sucess_div3").show().delay(3000).fadeOut();
+							$("#btn-d3").attr("disabled", false);
 
 						},
 					});
