--- a/templates/roadmap.html
+++ b/templates/roadmap.html
@@ -546,7 +546,8 @@ function myFunction() {
 			document.getElementById("sucess_div").hidden=false;
 			document.getElementById("sucess").innerHTML = "Thank you for subscribing"
 			$('#myInput').val('');
-			$("#sucess_div").delay(3000).fadeOut();
+			// $("#sucess_div").delay(3000).fadeOut()
+			$("#sucess_div").show().delay(3000).fadeOut();;
 			$("#btn-d").attr("disabled", false);
 
 		},
