--- a/templates/teams.html
+++ b/templates/teams.html
@@ -290,7 +290,8 @@
 				document.getElementById("sucess_div").hidden=false;
 				document.getElementById("sucess").innerHTML = "Thank you for subscribing"
 				$('#myInput').val('');
-				$("#sucess_div").delay(3000).fadeOut();
+				// $("#sucess_div").delay(3000).fadeOut();
+				$("#sucess_div").show().delay(3000).fadeOut();
 				$("#btn-d").attr("disabled", false);
 	
 			},
