--- a/templates/home.html
+++ b/templates/home.html
@@ -231,7 +231,7 @@
 				<video id="myVideo" class="video video_desktop_home" width="100%" height="100%" poster="{% static 'image/game-player.jpg' %}" autoplay muted controls>
 					<source src="https://wndr.nyc3.digitaloceanspaces.com/WNDR%20TRAILER.mp4" type="video/mp4">
 				</video>
-				<video id="myVideo" class="video video_mbl_home"  controls="controls" width="100%" height="100%" poster="{% static 'image/game-player_mbl.png' %}" autoplay muted>
+				<video id="myVideo" class="video video_mbl_home"  controls="controls" width="100%" height="100%" poster="{% static 'image/game-player_mbl.png' %}" autoplay muted controls>
 					<source src="https://wndr.nyc3.digitaloceanspaces.com/WNDR%20TRAILER.mp4" type="video/mp4">
 				</video>	
 	<div class="container">
