--- a/templates/our-vision.html
+++ b/templates/our-vision.html
@@ -241,7 +241,7 @@
 					<p>Tech Demo 2018</p>
 				</div>
 				<div class="vision_video_section" id="video_section_with_image">
-					<video id="myVideo12" class="video1" width="100%" height="100%" controls poster="{% static 'image/slide-15-STREAM.jpg' %}" autoplay muted>
+					<video id="myVideo12" class="video1" width="100%" height="100%" controls poster="{% static 'image/slide-15-STREAM.jpg' %}" disablepictureinpicture controlslist="nodownload noplaybackrate"  autoplay muted>
 						<source src="{% static 'video/wndr_Tech demo (1080p).mp4' %}" type="video/mp4">
 					</video>
 						<img class="vision_poster_bnr" id="vision_poster_bnr_img" src="{% static 'image/slide-15-STREAM.jpg' %}" alt="vision_poster">
